增加拼图小游戏

--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".activity.view.StarLevelViewActivity"/>
         <activity android:name=".activity.view.TimerViewActivity"/>
         <activity android:name=".activity.view.FlowRadioGroupActivity"/>
+        <activity android:name=".activity.view.PuzzleViewActivity"/>
     </application>
 
 </manifest>
