--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".activity.view.TimerViewActivity"/>
         <activity android:name=".activity.view.FlowRadioGroupActivity"/>
         <activity android:name=".activity.view.PuzzleViewActivity"/>
+        <activity android:name=".activity.view.AutoHorizontalScrollTextViewActivity"/>
+        <activity android:name=".activity.view.AutoVerticalScrollTextViewActivity"/>
     </application>
 
 </manifest>
