--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".activity.view.PuzzleViewActivity"/>
         <activity android:name=".activity.view.AutoHorizontalScrollTextViewActivity"/>
         <activity android:name=".activity.view.AutoVerticalScrollTextViewActivity"/>
+        <activity android:name=".activity.view.WaveViewActivity"/>
     </application>
 
 </manifest>
