增加图标提示信息功能

--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".activity.view.AutoHorizontalScrollTextViewActivity"/>
         <activity android:name=".activity.view.AutoVerticalScrollTextViewActivity"/>
         <activity android:name=".activity.view.WaveViewActivity"/>
+        <activity android:name=".activity.view.BadgeViewActivity"/>
     </application>
 
 </manifest>
