--- a/App/build.gradle
+++ b/App/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.larswerkman:lobsterpicker:1.0.0'
+    compile 'org.adw.library:discrete-seekbar:1.0.0'
+    compile 'com.kyleduo.switchbutton:library:1.4.4'
 }
