--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".activity.view.BadgeViewActivity"/>
         <activity android:name=".activity.view.CircleImageViewActivity"/>
         <activity android:name=".activity.view.CountTimeProgressViewActivity"/>
+        <activity android:name=".activity.view.BlurringViewActivity"/>
     </application>
 
 </manifest>
